# MyNoteBook

./: .gitignore  AGENT_MVP_TRACKING.md  README.md  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: agent-capability-review-c1.5.md  agent-runtime.md  architecture-audit-2026-07-13.md  architecture.md  automations.md  cognitive-system-integration.md  database.md  devlog.md  mcp-client.md  p1-knowledge-work-views.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_documents_and_assets.sql  0002_add_document_kind.sql  0003_add_assets_tags_and_document_metadata.sql  0004_add_agent_audit_and_document_search.sql  0005_add_agent_tool_calls.sql  0006_add_document_blocks.sql  0007_add_agent_document_creation.sql  0008_add_automations.sql  0009_add_p0_trusted_runtime.sql  0010_add_p1_knowledge_work_views.sql  0011_add_p2_external_governance_generated_views.sql  0012_add_agent_group_creation.sql  0013_harden_database_operations.sql  0014_add_cognitive_core.sql  0015_add_agent_communication.sql  0016_add_agent_request_result.sql  0017_allow_multi_document_agent_transactions.sql  0018_add_agent_request_revision.sql  0019_add_agent_workspace_state.sql  0020_add_mind_maps.sql  0021_add_workspace_views.sql  0022_add_mind_map_tree_position.sql  0023_add_workspace_view_tree_position.sql  0024_add_agent_request_mode.sql  0025_add_confirmation_envelope.sql  0026_add_workspace_view_pinning.sql  0027_add_agent_request_decision.sql  0028_add_agent_a2a_routing.sql
src-tauri/src/: agent_cancellation.rs  agent_repository.rs  agent_tools.rs  ai_models.rs  ai_proxy.rs  database.rs  document_core.rs  domain_events.rs  governance.rs  lib.rs  main.rs  mcp.rs  mcp_server_exposure.rs  secret_store.rs  sensitive_data.rs  skills.rs  storage.rs  views.rs  work.rs
src-tauri/test-fixtures/: cli-agent.mjs  mcp-stdio-server.mjs
(+805 files in other folders)
