[package]
name = "my-notebook"
version = "0.1.0"
description = "A local-first desktop block editor."
authors = ["myNoteBook"]
edition = "2021"

[lib]
name = "my_notebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
