[package]
name = "my-notebook"
version = "0.1.0"
description = "A local-first desktop block editor."
authors = ["myNoteBook"]
edition = "2021"
default-run = "my-notebook"

[lib]
name = "my_notebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
aes-gcm = "0.10"
keyring = "4.1"
rig-core = { version = "0.39", default-features = false }
reqwest = { version = "0.13", default-features = true }
rmcp = { version = "2.2", default-features = false, features = ["client", "server", "macros", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["process", "time", "io-util", "io-std", "rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
